--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <h1>Bienvenue sur le Dashboard</h1>
-        <a href="https://discord.com/api/oauth2/authorize?client_id=1341539216999321630&redirect_uri=https://dashboard-l77g.onrender.com&response_type=token&scope=identify%20guilds">
-            <button class="discord-btn">Se connecter avec Discord</button>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=1341539216999321630&redirect_uri=https://dashboard-l77g.onrender.com/callback&response_type=code&scope=identify%20guilds">
+    <button class="discord-btn">Se connecter avec Discord</button>
+</a>
         </a>
     </div>
 </body>
