--- a/callback.html
+++ b/callback.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authentification</title>
+    <title>Redirection...</title>
     <script>
+        // Récupérer le code dans l'URL
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('code');
 
         if (code) {
-            // Stocker le code dans le localStorage pour utilisation
+            // Stocker le code temporairement
             localStorage.setItem("discord_code", code);
-            window.location.href = "dashboard.html";  // Rediriger vers le dashboard
+            // Redirection vers le dashboard
+            window.location.href = "dashboard.html";  
         } else {
-            alert("Erreur lors de l'authentification.");
-            window.location.href = "index.html";  // Retour à la page de connexion
+            alert("Erreur d'authentification.");
+            window.location.href = "index.html";  
         }
     </script>
 </head>
