--- a/callback.html
+++ b/callback.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirection...</title>
+    <script src="fetchUser.js"></script>
     <script>
         // Récupérer le code dans l'URL
         const urlParams = new URLSearchParams(window.location.search);
