--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Bienvenue sur le Dashboard</h1>
-        <a href="https://discord.com/api/oauth2/authorize?client_id=1341539216999321630&redirect_uri=https://dashboard-l77g.onrender.com/callback&response_type=code&scope=identify%20guilds">
+        <a href="https://discord.com/api/oauth2/authorize?client_id=1326658376498679899&redirect_uri=https://casseco-6sa8.onrender.com/callback&response_type=code&scope=identify%20guilds">
             <button class="discord-btn">Se connecter avec Discord</button>
         </a>
     </div>
