--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <button class="discord-btn">Se connecter avec Discord</button>
         </a>
     </div>
+    <script src="fetchUser.js"></script>
 </body>
 </html>
