--- a/servers.html
+++ b/servers.html
@@ -11,6 +11,7 @@
         <h1>Vos serveurs</h1>
         <ul id="serverList"></ul>
     </div>
+    <script src="fetchUser.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
